--- a/Fumigabot/app/src/main/res/layout/activity_main.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,12 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.227" />
+        app:layout_constraintVertical_bias="0.153" />
 
     <Button
         android:id="@+id/btnIniciarFumigacion"
-        android:layout_width="152dp"
-        android:layout_height="73dp"
+        android:layout_width="151dp"
+        android:layout_height="59dp"
         android:background="@color/colorPrimaryDark"
         android:text="fumigar"
         android:textColor="@color/colorPrimary"
@@ -41,8 +41,25 @@
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.317" />
+        app:layout_constraintVertical_bias="0.283" />
+
+    <TextView
+        android:id="@+id/textBateria"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="175dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="175dp"
+        android:layout_marginBottom="44dp"
+        android:text="Batería:"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.203" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
