--- a/Fumigabot/app/src/main/res/values/colors.xml
+++ b/Fumigabot/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#FBEAEB</color>
     <color name="colorPrimaryDark">#2F3C7E</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorAccentTransparency">#9ED81B60</color>
+
+    <color name="activityBackground">@color/colorPrimary</color>
 </resources>
