Agregado del estado de la batería
- Se agregan los distintos niveles de batería en la interfaz de la app.
- Se ajustó la vinculación de un dispositivo con la app (busca en la base de datos si existe el ID)

--- a/Fumigabot/app/src/main/res/values/colors.xml
+++ b/Fumigabot/app/src/main/res/values/colors.xml
@@ -6,4 +6,12 @@
     <color name="colorAccentTransparency">#9ED81B60</color>
 
     <color name="activityBackground">@color/colorPrimary</color>
+    <color name="disabledControl">#9B9997</color>
+
+    <color name="fondoSugerencia">#66BB6A</color>
+    <color name="fondoAdvertencia">#FFB74D</color>
+    //#EF5350
+    <color name="fondoAlerta">#EF5350</color>
+    <color name="bordeRecuadro">@color/colorPrimary</color>
+
 </resources>
