--- a/Fumigabot/app/src/main/res/layout/activity_vincular_dispositivo.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_vincular_dispositivo.xml
@@ -24,18 +24,32 @@
 
     <Button
         android:id="@+id/btnVincular"
-        android:layout_width="162dp"
-        android:layout_height="46dp"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="161dp"
+        android:layout_height="60dp"
         android:layout_marginStart="116dp"
-        android:layout_marginLeft="116dp"
         android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
         android:layout_marginBottom="84dp"
         android:text="Vincular dispositivo"
+        android:theme="@style/botonStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
+
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="64dp"
+        android:text="Para vincular el dispositivo, ingresa su PIN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <androidx.appcompat.widget.AppCompatEditText
         android:id="@+id/txtPin"
@@ -53,17 +67,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginLeft="64dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginRight="64dp"
-        android:text="Ingresa el PIN del dispositivo a continuación:"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
