--- a/Fumigabot/app/src/main/res/values/styles.xml
+++ b/Fumigabot/app/src/main/res/values/styles.xml
@@ -17,9 +17,11 @@
 
     <!-- Estilos de cada componente  -->
 
-    <style name="botonStyle" parent="Widget.AppCompat.Button">
-        <item name="android:background">@color/colorPrimaryDark</item>
+    <style name="botonStyle" parent="ThemeOverlay.AppCompat.Dark">
+        <item name="android:theme">@style/Widget.AppCompat.Button.Colored</item>
         <item name="android:textColor">@color/colorPrimary</item>
+        <item name="colorButtonNormal">@color/disabledControl</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
     </style>
 
 
@@ -27,6 +29,15 @@
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
 
+    <style name="labelAdvertenciaStyle"> # parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:background">@color/fondoAdvertencia</item>
+    </style>
+
+    <style name="labelAlertaStyle"> # parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:background">@color/fondoAlerta</item>
+    </style>
 
     <style name="editTextStyle" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">@color/colorPrimaryDark</item>
