--- a/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
@@ -8,79 +8,12 @@
     tools:context=".RobotHistorialActivity">
 
     <TextView
-        android:id="@+id/textEstadoRobot"
+        android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Estado del robot"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.153" />
-
-    <Button
-        android:id="@+id/btnIniciarFumigacion"
-        android:layout_width="151dp"
-        android:layout_height="59dp"
-        android:text="fumigar"
-        android:theme="@style/botonStyle"
-        style="@style/Widget.AppCompat.Button.Colored"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.696" />
-
-    <TextView
-        android:id="@+id/textActividadRobot"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ESPERANDO ÓRDENES..."
-        android:textColor="@color/colorPrimaryDark"
+        android:text="HISTORIAL CHEEECK"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303" />
-
-    <TextView
-        android:id="@+id/textBateria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="175dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="175dp"
-        android:layout_marginBottom="44dp"
-        android:text="Batería:"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.203" />
-
-    <LinearLayout
-        android:layout_width="391dp"
-        android:layout_height="38dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/recuadro"
-        android:orientation="vertical"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/textActividadRobot"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textBateria">
-
-        <TextView
-            android:id="@+id/infoBateria"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center|center_horizontal|center_vertical"
-            android:gravity="center"
-            android:textAlignment="center" />
-    </LinearLayout>
-
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
