WIP: Obtiene fumigaciones y las pone en un tableLayout

--- a/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
@@ -7,13 +7,11 @@
     android:background="@color/colorPrimary"
     tools:context=".RobotHistorialActivity">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HISTORIAL CHEEECK"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <TableLayout
+        android:id="@+id/tablaHistorial"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp">
+    </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
