(Beta) Registro de Fumigaciones
Agrega fumigaciones del robot en Firebase.
Incorporación del cronómetro en pantalla con el tiempo transcurrido.

--- a/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
@@ -46,6 +46,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.696" />
 
+
     <TextView
         android:id="@+id/textActividadRobot"
         android:layout_width="wrap_content"
@@ -57,6 +58,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.303" />
+
+    <Chronometer
+        android:id="@+id/Cronometro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
+        android:textColor="@color/colorPrimaryDark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textActividadRobot" />
 
     <TextView
         android:id="@+id/textBateria"
@@ -95,5 +107,6 @@
             android:gravity="center"
             android:textAlignment="center" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
