--- a/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
@@ -7,19 +7,22 @@
     android:background="@color/colorPrimary"
     tools:context=".RobotHistorialActivity">
 
+
     <TableLayout
         android:id="@+id/tablaHistorial"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp"
+        android:layout_marginTop="1dp"
+        android:fitsSystemWindows="true"
         android:shrinkColumns="*"
         android:stretchColumns="*"
 
         android:orientation="horizontal"
         android:paddingBottom="10dp"
-
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TableRow android:id="@+id/tablaHistorialTitulo">
             <TextView
@@ -29,38 +32,44 @@
                 android:layout_span="4"
                 android:text="HISTORIAL DE FUMIGACIONES"
                 android:gravity="center_horizontal"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorPrimary"/>
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" />
         </TableRow>
+
         <TableRow android:id="@+id/tablaHistorialColumnas">
             <TextView
                 android:layout_column="0"
+                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="ID"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorPrimary" />
+                android:textColor="@color/colorPrimaryDark" />
+
             <TextView
                 android:layout_column="1"
+                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Inicio"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorPrimary" />
+                android:textColor="@color/colorPrimaryDark" />
+
             <TextView
                 android:layout_column="2"
+                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Fin"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorPrimary" />
+                android:textColor="@color/colorPrimaryDark" />
+
             <TextView
                 android:layout_column="3"
+                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Duración"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark"
-                android:background="@color/colorPrimary" />
+                android:textColor="@color/colorPrimaryDark" />
         </TableRow>
+
     </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
