--- a/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
@@ -7,6 +7,19 @@
     android:background="@color/colorPrimary"
     tools:context=".RobotHistorialActivity">
 
+    <TextView
+        android:id="@+id/textSinFumigaciones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/recuadro_sin_fumigaciones"
+        android:padding="20dp"
+        android:text="Todavía no se realizaron fumigaciones"
+        android:textColor="@color/colorPrimary"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TableLayout
         android:id="@+id/tablaHistorial"
@@ -14,29 +27,31 @@
         android:layout_height="match_parent"
         android:layout_marginTop="1dp"
         android:fitsSystemWindows="true"
-        android:shrinkColumns="*"
-        android:stretchColumns="*"
-
         android:orientation="horizontal"
         android:paddingBottom="10dp"
+
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow android:id="@+id/tablaHistorialTitulo">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="30dp"
                 android:layout_span="4"
-                android:text="HISTORIAL DE FUMIGACIONES"
-                android:gravity="center_horizontal"
                 android:background="@color/colorPrimary"
+                android:gravity="center_horizontal"
+                android:padding="30dp"
+                android:text="HISTORIAL DE FUMIGACIONES"
                 android:textColor="@color/colorPrimaryDark" />
         </TableRow>
 
         <TableRow android:id="@+id/tablaHistorialColumnas">
+
             <TextView
                 android:layout_column="0"
                 android:background="@color/colorPrimary"
