Aviso de batería con problemas
"Batería con problemas" cuando es -1. Se reemplaza el porcentaje de batería para no mostrar ese valor.
Queda a criterio cambiar los colores para mejor visibilidad.

--- a/Fumigabot/app/src/main/res/values/colors.xml
+++ b/Fumigabot/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
     <color name="fondoAdvertencia">#FFB74D</color>
     //#EF5350
     <color name="fondoAlerta">#EF5350</color>
+    <color name="fondoAvisoBateria">#9575CD</color>
     <color name="bordeRecuadro">@color/colorPrimary</color>
 
 </resources>
