--- a/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_home.xml
@@ -32,7 +32,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.604" />
+        app:layout_constraintVertical_bias="0.625" />
+
+    <Button
+        android:id="@+id/btnMisQuimicos"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="211dp"
+        android:layout_height="53dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Mis Químicos"
+        android:theme="@style/botonStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.879" />
 
     <Button
         android:id="@+id/btnVerHistorialFumigaciones"
@@ -46,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.731" />
+        app:layout_constraintVertical_bias="0.752" />
 
     <TextView
         android:id="@+id/textActividadRobot"
@@ -56,19 +70,18 @@
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.369" />
+        app:layout_constraintVertical_bias="0.47" />
 
     <Chronometer
         android:id="@+id/Cronometro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textActividadRobot" />
 
@@ -122,6 +135,7 @@
         app:layout_constraintVertical_bias="0.233" />
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="391dp"
         android:layout_height="38dp"
         android:background="@drawable/recuadro"
@@ -141,18 +155,26 @@
             android:textAlignment="center" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btnMisQuimicos"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="211dp"
-        android:layout_height="53dp"
-        android:background="@color/colorPrimaryDark"
-        android:text="Mis Químicos"
-        android:theme="@style/botonStyle"
+    <TextView
+        android:id="@+id/textQuimicosDisponibles"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Químico a utilizar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.337" />
+
+    <Spinner
+        android:id="@+id/listaQuimicos"
+        android:layout_width="391dp"
+        android:layout_height="38dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.858" />
+        app:layout_constraintVertical_bias="0.383" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
