--- a/Fumigabot/app/src/main/res/layout/activity_mis_quimicos.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_mis_quimicos.xml
@@ -1,6 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
+    tools:context=".MisQuimicosActivity">
 
-</LinearLayout>
+    <TableLayout
+        android:id="@+id/tablaQuimicos"
+        android:layout_width="411dp"
+        android:layout_height="492dp"
+        android:layout_marginTop="1dp"
+        android:fitsSystemWindows="true"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp"
+
+        android:shrinkColumns="*"
+        android:stretchColumns="*"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow android:id="@+id/tablaQuimicosTitulo">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                android:gravity="center_horizontal"
+                android:padding="30dp"
+                android:text="MIS QUÍMICOS"
+                android:textColor="@color/colorPrimaryDark" />
+        </TableRow>
+<!--
+        <TableRow android:id="@+id/tablaQuimicosFilaNueva">
+
+            <EditText
+                android:layout_column="0"
+                android:background="@color/colorAccentFilas"
+                android:hint="ingresá un nuevo químico"
+                android:padding="15dip"
+                android:textAlignment="center"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="14sp" />
+        </TableRow>-->
+    </TableLayout>
+
+    <Button
+        android:id="@+id/btnAgregarQuimico"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="211dp"
+        android:layout_height="53dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Agregar químico"
+        android:theme="@style/botonStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tablaQuimicos" />
+</androidx.constraintlayout.widget.ConstraintLayout>
