--- a/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
+++ b/Fumigabot/app/src/main/res/layout/activity_robot_historial.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
     tools:context=".RobotHistorialActivity">
+    <!-- android:background="@color/colorPrimary" -->
 
     <TextView
         android:id="@+id/textSinFumigaciones"
@@ -14,12 +14,12 @@
         android:background="@drawable/recuadro_sin_fumigaciones"
         android:padding="20dp"
         android:text="Todavía no se realizaron fumigaciones"
-        android:textColor="@color/colorPrimary"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--android:textColor="@color/colorPrimary"-->
 
     <TableLayout
         android:id="@+id/tablaHistorial"
@@ -43,46 +43,51 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_span="4"
-                android:background="@color/colorPrimary"
                 android:gravity="center_horizontal"
                 android:padding="30dp"
-                android:text="HISTORIAL DE FUMIGACIONES"
-                android:textColor="@color/colorPrimaryDark" />
+                android:text="HISTORIAL DE FUMIGACIONES" />
+            <!--
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" -->
         </TableRow>
 
         <TableRow android:id="@+id/tablaHistorialColumnas">
 
             <TextView
                 android:layout_column="0"
-                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="ID"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAlignment="center" />
+            <!--
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" -->
 
             <TextView
                 android:layout_column="1"
-                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Inicio"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAlignment="center" />
+            <!--
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" -->
 
             <TextView
                 android:layout_column="2"
-                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Fin"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAlignment="center" />
+            <!--
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" -->
 
             <TextView
                 android:layout_column="3"
-                android:background="@color/colorPrimary"
                 android:padding="3dip"
                 android:text="Duración"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimaryDark" />
+                android:textAlignment="center"/>
+            <!--
+                android:background="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark" -->
         </TableRow>
 
     </TableLayout>
